# g-ray-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt  stdafx.h
code/editor/: editorsystem.cpp  editorsystem.h  editorwindow.cpp  editorwindow.h  propertywindow.cpp  propertywindow.h
code/engine/: application.cpp  application.h  camera.cpp  camera.h  debug.cpp  debug.h  engine.cpp  engine.h  entity.cpp  entity.h  ilevel.cpp  ilevel.h  input.cpp  input.h  log.cpp  log.h  luascriptmanager.cpp  luascriptmanager.h  main.cpp  memorymanager.cpp  memorymanager.h  resourcemanager.cpp  resourcemanager.h  serializer.cpp  serializer.h
code/filesystem/: datastream.cpp  datastream.h  filestream.cpp  filestream.h  filesystem.cpp  filesystem.h
code/game/: actor.cpp  actor.h  camerafps.cpp  camerafps.h  customweapon.cpp  customweapon.h  game.cpp  game.h  light.cpp  light.h  objectfactory.cpp  objectfactory.h  staticobject.cpp  staticobject.h  weaponrail.cpp  weaponrail.h  world.cpp  world.h
code/game/phys/: physics_dbgrender.h  physics_manager.cpp  physics_manager.h  physics_world.cpp  physics_world.h
code/render/: aabb.h  culling.cpp  culling.h  debug_render.cpp  debug_render.h  deferred_renderer.cpp  deferred_renderer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  gfxcommon.h  gl_exts.cpp  gl_exts.h  indexbuffer.cpp  indexbuffer.h  material.cpp  material.h  model.cpp  model.h  postprocess.cpp  postprocess.h  r_stats.cpp  r_stats.h  render.h  screenquad.cpp  screenquad.h  shader.cpp  shader.h  shadersystem.cpp  shadersystem.h  shadowrenderer.cpp  shadowrenderer.h  sphere.cpp  sphere.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
code/render/gl/: glbuffers.cpp  glbuffers.h  gldevice.cpp  gldevice.h  glframebuffer.cpp  glframebuffer.h  glrender.cpp  glrender.h  gltextures.cpp  gltextures.h
code/render/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_mgr.cpp  imgui_mgr.h
data/levels/: test.level
data/materials/: debug_general.material  test - Copy.material  test.material
data/materials/skybox/: sky_nx.material  sky_ny.material  sky_nz.material  sky_px.material  sky_py.material  sky_pz.material
data/models/: test.dae  test1.dae
data/scripts/engine/: init.lua  r_shaders.lua
data/scripts/game/: init.lua
data/shaders/: def_geom.fs  def_geom.vs  def_light.psh  forw_geom.fs  forw_geom.vs  quad.fsh  quad.vsh
